--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "@kentico/kontent-delivery": "^10.4.1",
+    "@types/styled-components": "^5.1.12",
+    "babel-plugin-styled-components": "^1.13.2",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "rxjs": "^7.1.0"
+    "rxjs": "^7.1.0",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^15.6.0",
