--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "rxjs": "^7.1.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.6",
+    "@types/uuid": "^8.3.1",
     "typescript": "^4.2.4"
   }
 }
